Agrego detalles Modelo OSI y lo anotado en clases

--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -1,5 +1,5 @@
 
->[!tldr] Introducción a Conceptos
+>[!tldr] Conceptos que Maneja la Materia
 >- **Sistema**: en sentido estricto es un conjunto dinámico relativamente autónomo de elementos interdependientes e interactuantes, que normalmente tienen la capacidad de autorregularse o de modificar su funcionamiento de acuerdo a los resultados de su actividad.
 >- **Sistema Abierto**: aquellos sistemas que son susceptibles de portabilidad e interoperabilidad (distintos software pueden operar de manera simultánea), y que utilizan estándares abiertos.
 >- **Estándar Abierto**: es una especificación pública para desarrollar una tarea específica. Dicha especificación debe haber sido alcanzada en un proceso abierto a toda la industria y ser aplicable sin tener costos monetarios.
@@ -12,18 +12,21 @@ Una red de computadoras es una colección de dispositivos autónomos interconect
 - **Generación de la señal** (transmitir en el emisor e interpretar en el receptor).
 - **Detección y corrección de errores Direccionamiento** (identificación del destino y del origen).
 - **Encaminamiento** (si existen varias rutas para llegar al destino).
-- **Seguridad** (autenticidad emisor, integridad datos, confidencialidad, uso autorizado del recurso).
+- **Seguridad** (autenticidad del emisor, integridad datos, confidencialidad, uso autorizado del recurso).
 
 El sistema de transmisión que comunica el origen y el destino, puede ser:
 
-- **LAN** (Local Area Network = Red de Área Local): red que cubre un ámbito geográfico reducido, como por ejemplo: una oficina, un edificio.
+- **LAN** (Local Area Network = Red de Área Local): red que cubre un ámbito geográfico reducido, como por ejemplo una oficina o un edificio; por lo general este tipo de redes son privadas.
 - **WAN** (Wide Area Network = Red de Área Extensa): cubren un área mayor, usan redes de acceso público, como la telefónica, y están conformadas por la interconexión de nodos de conmutación.
 
 >[!example] Topología de las Redes
 >- **Punto a Punto**: El mensaje es recibido solamente por la estación destinataria.
->- **Multipunto**: Múltiples nodos de emisión y recepción conectados al mismo canal único, compartido y de difusión. Cualquier nodo transmite trama y cada uno de los demás recibe una copia.
->- **Cliente Servidor**: Una parte realiza una petición y la otra responde dicha petición. Un modelo de trabajo muy utilizado en redes es el de *cliente-servidor*.
->- **Peer to Peer**: En general, una red informática entre iguales se refiere a una red que no tiene clientes y servidores fijos, sino una serie de máquinas que se comportan a la vez como clientes y como servidores de los demás nodos de la red.
+>- **Multipunto**: Múltiples nodos de emisión y recepción conectados a un único canal compartido. Cualquier nodo transmite tramas y cada uno de los demás recibe una copia, este tipo de topología de red requiere ser gestionada de forma adecuada, para aprovechar al máximo los recursos.
+
+Además, las redes pueden ser conectadas entre ellas a través de distintos modelos de redes, principalmente dos:
+
+- **PAN** (Metropolitan Area Network = Red de Área Metropolitana): interconectan varias redes LAN en una zona geográficamente cercana, un ejemplo de esto puede ser WiMax, MetroEthernet.
+- **MAN** (Personal Area Network = Red de Área Personal): interconecta dispositivos dentro del área más cercana de un usuario, como por ejemplo el Bluetooth.
 
 ## Modelos de Arquitectura de Comunicaciones
 
@@ -34,12 +37,23 @@ La comunicación entre dos capas pares, en dos máquinas distintas, se hace a tr
 - **Entidad**: Ente con capacidades de enviar y recibir información. Por ejemplo: programas de aplicación, sistema de manejo de bases de datos.
 - **Sistema**: Objeto físico que contiene una o más entidades. Por ejemplo: computadoras
 
+>[!example] Ejemplo de Utilización de estas Arquitecturas
+>- **Cliente Servidor**: Una parte realiza una petición y la otra responde dicha petición. Un modelo de trabajo muy utilizado en redes es el de *cliente-servidor*.
+>- **Peer to Peer**: En general, una red informática entre iguales se refiere a una red que no tiene clientes y servidores fijos, sino una serie de máquinas que se comportan a la vez como clientes y como servidores de los demás nodos de la red.
+
 Si dos entidades se quieren comunicar exitosamente, deben usar el mismo lenguaje: ***Protocolo***.
 
 ### Arquitecturas de Protocolos en Capas
 
-- **Modelo OSI** (Open Systems Interconection) desarrollado por la Organización Internacional de Estandarización en 1984, es un modelo de 7 niveles para la interconexión o entorno de sistemas abiertos y heterogéneos.
-- **Modelo TCP/IP** (Transmission Control Protocol/ Internet Protocol), es un modelo de 4 capas basado en modelo OSI, adoptado para la interconexión de sistemas.
+- **Modelo OSI** (Open Systems Interconection) desarrollado por la Organización Internacional de Estandarización en 1984, es un modelo de 7 niveles para la interconexión o entornos de sistemas abiertos y heterogéneos. Sus capas son las siguientes:
+	1. **Aplicación**: Proporciona el acceso al entorno OSI para los usuarios y también proporciona servicios de información distribuida.
+	2. **Presentación**: Proporciona a los procesos de aplicación independencia respecto a las diferencias en la representación de los datos.
+	3. **Sesión**: Proporciona el control de la comunicación entre las aplicaciones: establece, gestiona y cierra las comunicaciones o sesiones entre las aplicaciones cooperadoras.
+	4. **Transporte**: Proporciona seguridad, transferencia transparente de datos entre los puntos finales, además proporciona procedimientos de recuperación de errores y control de flujo *origen-destino*.
+	5. **Red**: Proporciona independencia a los niveles superiores respecto a las técnicas de conmutación y de transmisión utilizadas para conectar los sistemas, esta capa es la responsable del establecimiento, mantenimiento y cierre de la conexión.
+	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del inlace físico; envía bloques de datos, llamados tramas, llevando a cavo la sincronización, el control de errores y de flujo necesarios.
+	7. **Física**: Se encarga de la transmisión de cadenas de bits no estructurados sobre el medio físico; está relacionada con las características mecánicas, eléctricas, funcionales y de procedimiento para acceder a los medios físicos.
+- **Modelo TCP/IP** (Transmission Control Protocol/ Internet Protocol), es un modelo de 4 capas basado en modelo OSI, adoptado para la interconexión de sistemas. Este modelo es el más ampliamente usado ya que es independiente a la plataforma en la que se esté utilizando, al contrario del modelo OSI tradicional que varía según su implementación.
 
 >[!tldr] Unidades de Datos Utilizados por los Protocolos
 >Los datos de usuario constituyen un bloque de información, al cual cada capa agrega un encabezado con información de control. La unión de datos de usuario y el encabezamiento se denomina unidad de datos del protocolo (PDU).
