Unidad 1 de Cálculo terminada

--- a/4º Año/Cálculo Numérico/Unidad 1/1. Mediciones y Errores.md
+++ b/4º Año/Cálculo Numérico/Unidad 1/1. Mediciones y Errores.md
@@ -59,7 +59,7 @@ $$
 
 ---
 
-### Cotas de Error
+## Cotas de Error
 
 Las cotas de error son valores que indican cuánto puede desviarse el resultado de una aproximación o medición del valor verdadero o exacto. En este caso, las cotas de error de redondeo serán:
 
@@ -130,4 +130,70 @@ $$
 Que representa una estimación del error de la función y $\Delta x = |x - \overline{x}|$ representa una estimación del error de $x$. La fórmula anterior proporciona la capacidad de aproximar el error de una función, mediante la derivada de la función y una estimación del error de la variable independiente.
 
 #### Error de Redondeo
+
+Estos errores resultan de representar en forma aproximada números exactos, dependen de la computadora o de quien realice los cálculos. Si se realizan las operaciones algebraicas a mano se deben tener en cuenta las reglas de redondeo.
+
+##### Reglas de Redondeo
+
+1. Se conservan las cifras significativas y el resto se descarta. El último dígito que se conserva se aumenta en 1 si el primer dígito descartado es mayor que 5. De otra manera se deja igual. Si el primer dígito descartado es 5 o es 5 seguido de ceros, entonces el último dígito retenido se incrementa en 1 solo si es impar.
+2. En la suma y la resta el redondeo se lleva a cabo de manera que el último dígito retenido en la respuesta corresponda al último dígito más significativo de los números que están sumando o restando. Un dígito en la columna de las centésimas es más significativo que en las milésimas.
+
+>[!note] Error de Redondeo en las Series
+>Este tipo de error suele ocurrir cuando se calculan series infinitas, donde el término inicial es grande en comparación con los términos sucesivos, de manera tal que después de sumar pocos términos, estamos en esta situación. Se puede tratar de solucionar, sumando en sentido inverso, es decir, en forma ascendente.
+
+3. La cancelación por resta surge cuando dos números casi iguales se restan, y el resultado es un número mucho más pequeño con menos dígitos significativos de precisión que los números originales. Imaginemos que tenemos ***A = 0,1234*** y ***B = 0,1233***. Al restar B de A, el resultado es 1. Sin embargo, este '1' solo tiene un dígito de precisión, mientras que los números originales tenían 4 dígitos significativos. La diferencia resultante, por lo tanto, tiene mucha menos precisión que los números originales. Esto se puede mitigar utilizando algoritmos numéricos que están diseñando para minimizar este efecto, utilizando una representación de doble precisión o reestructurando los cálculos para evitar restar números cercanos.
+4. Para la multiplicación y la división el redondeo es tal que la cantidad de cifras significativas del resultado es igual al número que contenga menos cifras significativas. Por ejemplo sí multiplicamos 4.56 y 2.1, el resultado crudo podría ser 9.576, sin embargo, este resultado termina siendo 9.6, ya que 2.1 tiene solo dos cifras significativas.
+5. En el caso de operaciones combinadas se ejecutan las operaciones entre paréntesis y el resultado se redondea antes de proceder con la otra operación.
+
+Si los cálculos se realizan utilizando una computadora se debe considerar que la mayoría de ellas guardan un número finito de cifras significativas durante un cálculo y resultan críticos en dos casos:
+
+1. Ciertos métodos requieren cantidades extremadamente grandes para obtener una respuesta, además los cálculos dependen entre sí, por lo tanto, los cálculos posteriores son dependientes de los anteriores y en consecuencia el efecto de acumulación en el transcurso de una gran cantidad de cálculos resulta significativo.
+2. Sí se realizan operaciones algebraicas con números muy pequeños y muy grandes al mismo tiempo.
+
+>[!example] Otros Tipos de Error
+>- **Errores por Equivocación**: Son errores por torpeza o por equivocación, son debidos por lo general a errores humanos. Las equivocaciones ocurren en cualquier etapa del proceso de modelado matemático y pueden contribuir con las otras componentes del error.
+>- **Errores de Formulación**: Estos errores se generan en un modelo matemático incompleto y si se está usando un modelo deficiente, ningún método numérico generará resultados adecuados.
+>- **Incertidumbre en los Datos**: Algunas veces se introducen errores en un análisis debido a la incertidumbre de los datos físicos sobre los que se basa el modelo. Son errores que muestran inexactitud e imprecisión.
+
+## Análisis Numérico
+
+Se pueden definir a los métodos numéricos como las técnicas mediante las cuales es posible formular problemas de manera que puedan resolverse utilizando operaciones aritméticas, o también como el grupo de conocimientos matemáticos relacionados con el diseño y análisis de algoritmos necesarios para resolver problemas de ciencia e ingeniería. Estos métodos se caracterizan porque permiten dar más importancia a la formulación e interpretación de la solución, los cálculos involucrados están relacionados con cantidades discretas, permiten obtener resultados aproximados y ayudan a identificar, cuantificar y minimizar los errores.
+
+En el ejercicio de la profesión y en la vida diaria, se presentan diferentes problemas, que no tienen una solución matemática exacta, pero que es imprescindible resolver como:
+
+- **Raíces de ecuaciones**, que está relacionado de una variable o un parámetro que satisface una ecuación lineal o no lineal.
+- **Sistemas de ecuaciones algebraicas lineales**, donde se busca un conjunto de valores que satisfaga simultáneamente un conjunto de ecuaciones algebraicas lineales.
+- **Optimización**, donde se trata de determinar el valor o los valores de la variable independiente que corresponden al “mejor” o al valor óptimo de la función, es decir, se considera la obtención de los máximos y mínimos.
+- **Ajuste de curvas**, donde se ajustan curvas a un conjunto de datos representados por puntos, donde los datos provienen de la experimentación. Las técnicas son la regresión y la interpolación. La primera (regresión) se usa cuando hay un significativo grado de error asociado a los datos, entonces se halla la curva que represente la tendencia general de los datos. La segunda, permite determinar valores intermedios, entre datos que están relativamente libres de errores, y la información está tabulada.
+- **Integración**: que consiste básicamente en determinar el área bajo la curva.
+- **Derivación** que sirve para obtener aproximaciones de derivadas de cualquier orden, con datos discretos.
+- **Ecuaciones diferenciales ordinarias**, ya que muchas leyes físicas que rigen los problemas, están expresadas en términos de la razón de cambio de una cantidad, y esas ecuaciones muchas veces no tienen solución matemática.
+- **Ecuaciones en derivadas parciales**, que permite obtener soluciones numéricas para ecuaciones diferenciales en derivadas parciales, que describen muchos problemas físicos, donde una cantidad se expresa en términos de su razón de cambio respecto de dos o más variables independientes.
+
+##### Modelos Matemáticos
+
+El objetivo de un modelo consiste en reproducir la realidad de la forma más fiel posible, tratando de entender cómo se comporta el mundo real y obteniendo las respuestas que pueden esperarse de determinadas acciones. Su selección es una etapa crucial para obtener una solución satisfactoria a un problema real. Las estructuras matemáticas asociadas no son arbitrarias, sino una consecuencia de la realidad misma.
+
+Un ***modelo mental*** puede definirse como una representación de la realidad en la que se consideran los aspectos más relevantes, es decir el modelo representa una parte de la realidad.
+Un ***modelo matemático*** es una formulación o ecuación que expresa las características fundamentales de un sistema o proceso físico en términos matemáticos. Los modelos pueden estar constituidos por simples ecuaciones algebraicas hasta grandes y complicados sistemas de ecuaciones diferenciales. Sus características son:
+1. Describe un sistema o proceso natural en términos matemáticos.
+2. Representa una idealización y una simplificación de la realidad.
+3. Conduce a resultados predecibles y, en consecuencia, puede utilizarse para propósitos de predicción.
+
+La generación de un modelo matemático involucra dos etapas fundamentales, la de conceptualización y la de formulación. En la primera se debe caracterizar el contexto del problema real, definir claramente el propósito y los límites del modelo, identificar y establecer relaciones entre las variables; en la segunda etapa se deben determinar las ecuaciones asociadas al modelo y seleccionar y estimar los parámetros del modelo.
+El objetivo del modelo es aplicarlo para obtener alguna información del problema o fenómeno que se estudia. Frecuentemente, sufre modificaciones y a veces es descartado y aunque contenga errores, puede poner en evidencia componentes esenciales de una realidad compleja.
+##### Clasificación de Modelos Matemáticos
+
+- **En función del tratamiento de la incertidumbre**
+	- **Determinístico**: Se conoce de manera puntual la forma del resultado, ya que no hay incertidumbre. Además, los datos utilizados para alimentar el modelo son completamente conocidos y determinados.
+	- **Estocástico**: Probabilístico, no se conoce el resultado esperado, sino su probabilidad y existe, por lo tanto, incertidumbre.
+- **En función del origen de la información utilizada para construirlos**
+	- **Modelos Heurísticos**: Son aquellos basados en las explicaciones sobre las causas o mecanismos naturales que dan lugar al fenómeno estudiado.
+	- **Modelos Empíricos**: Son los que utilizan las observaciones directas o los resultados de experimentos del fenómeno estudiado.
+- **En función de su campo de aplicación**
+	- **Modelos Conceptuales**: Son los que reproducen mediante fórmulas y algoritmos matemáticos más o menos complejos los procesos físicos que se producen en la naturaleza.
+	- **Modelo Matemático de Optimización**: Son ampliamente utilizados en diversas ramas de la ingeniería para resolver problemas que por su naturaleza son indeterminados, es decir presentan más de una solución posible.
+- **En función del factor tiempo**
+	- **Modelos Estáticos**: Son independientes del tiempo, consideran situaciones estacionarias.
+	- **Modelos Dinámicos**: Son los que describen el comportamiento del sistema en estudio en función del tiempo.
 
