Unidad 1 y 2 Met. Sis. II | ejemplo resoliciones Cálculo

--- a/3° Año/Metodologia de Sistemas I/Unidad 6/1. Prototipos.md
+++ b/3° Año/Metodologia de Sistemas I/Unidad 6/1. Prototipos.md
@@ -34,6 +34,12 @@ Con la creación de prototipos se busca obtener reacciones iniciales de los usua
 >
 >No está de más aclarar que por eso mismo los usuarios deben estar involucrados desde el inicio en el desarrollo del proyecto.
 
+No solo existe esa categorización de los prototipos, a estos también se los puede clasificar según su permanencia en el tiempo
+
+- **Desechable**: El prototipo es una versión rudimentaria del sistema que posteriormente es desechada.
+- **Evolutivo**: El prototipo debe convertirse, eventualmente, en el sistema final usado.
+- **Mixto**: Se aplican técnicas convencionales para los requerimientos bien conocidos y se realiza una combinación de prototipos desechables y evolutivos para los requerimientos poco conocidos.
+
 >[!info] Lineamientos a la Hora de Desarrollar un Prototipo
 >Cuando en un proyecto se toma la decisión de crear prototipos, estos se deberían hacer siguiendo una serie de pautas, con el fin de que estos resulten útiles y escalables
 >1. Trabajar en módulos administrables, es decir que los distintos módulos del programa tengan un nivel de acoplamiento bajo.
