--- a/4º Año/Cálculo Numérico/Unidad 1/1. Mediciones y Errores.md
+++ b/4º Año/Cálculo Numérico/Unidad 1/1. Mediciones y Errores.md
@@ -61,6 +61,23 @@ $$
 
 ## Cotas de Error
 
+##### Cota de Truncamiento
+$$
+|\frac{x - \overline{x}}{x}| \leq 10^{-t+1}
+$$
+
+##### Cota de Redondeo Simétrico
+$$
+|\frac{x - \overline{x}}{x}| \leq 5 \cdot 10^{-t}
+$$
+
+En donde:
+- $x$ es el valor real.
+- $\overline{x}$ es su aproximación.
+- $t$ la cantidad de dígitos significativos.
+
+## Cálculo de Errores
+
 Las cotas de error son valores que indican cuánto puede desviarse el resultado de una aproximación o medición del valor verdadero o exacto. En este caso, las cotas de error de redondeo serán:
 
 - **Error Absoluto**: $E_a = fl(x)-x$, que con su valor absoluto nos queda $|E_a| \leq 0,5.10^{e-t}$.
