Completando Redes y Refactor de algunos archivos

--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
@@ -8,54 +8,80 @@ Las principales características que tienen estos protocoles de nivel de aplicac
 - Replicación de datos para acercarlos a los usuarios y mejor tolerancia a fallas.
 - Administración local.
 
->[!example] Definiciones
->- **Entidad**: Casi cualquier objeto de un sistema distribuido, puede usarse para referirse tanto a archivos, hosts, mailboxes, entre muchas otras. Para poder operar con una entidad se necesita un punto de acceso a esta misma, estos puntos de acceso están formados por la dirección ***IP*** del dispositivo más el número de puerto correspondiente a esa aplicación.
->- **Nombre**: Cadenas de bits o caracteres que se usan para referirse a las entidades, estas cadenas pueden ser categorizadas es dos grupos:
->	- Orientadas al Usuario: Es texto que encapsulan la dirección IP del servidor que aloja el servicio, de esta manera el usuario puede recordar con mayor facilidad el nombre del servicio.
->	- Orientados al Sistema: Es una cadena de caracteres donde queda especificado el punto de acceso a la entidad, el mejor ejemplo de esto es la ***IP*** de una aplicación, donde se incluyo el puerto en el que opera.
+## Tipos de Protocolos a Nivel Aplicación
 
-## Sistema de Espacios de Nombres
+>[!example] World Wide Web
+>Es un sistema que asocia documentos hipermediales almacenados en equipos de computación interconectados a través de la red Internet. El conjunto de los servidores Web de Internet forman parte del World Wide Web, aunque no hay una administración central ni una coordinación de servidores. 
+>Cada servidor se identifica por una dirección IP, mientras que cada recurso o documento en un servidor Web está designado por una dirección URL. La web presenta las siguientes características:
+>- **Hipermedial**: Maneja información multimedia sobre la que se puede navegar.
+>- **Distribuida**: compuesta por millares de servidores localizados en cientos de ciudades.
+>- **Heterogénea**: distintos servicios y protocolos accedidos desde un único servicio cliente.
+>- **Colaborativa**: cualquier persona puede en principio agregar, extraer o consultar información, disminuyendo las limitaciones de distancia y tiempo.
 
-La forma en la que los ***Sistemas de Nombres de Dominio (DNS)*** pueden resolver los direccionamientos desde el cliente hacia su correspondiente servidor es mediante una organización jerárquica de los nombres de las URL, a nivel lógico, estos sistemas usan una estructura arbórea, similar a la de los sistemas de archivos de los sistemas operativos, para organizar todos los nombres de dominios, véase la siguiente imagen.
+#### Hiper Text Transfer Protocol (HTTP)
 
-![[DNS-organizacion.png]]
+Al igual que DNS, el protocolo HTTP se basa en la arquitectura o modelo cliente-servidor, en donde:
 
->[!note] Forma de Resolución del Direccionamiento
->Supongamos que queremos entrar a www.fcad.uner.edu.ar, los DNS empiezan a resolver las URL de atrás hacia adelante, en este caso primero iría a la carpeta ***ar***, a continuación a la carpeta ***edu***, siguiendo con la carpeta ***uner*** y por último se dirigiría al recurso que es ***fcad***.
+- Los navegadores son los agentes de usuario que recuperan los recursos deseados, facilitando la navegación a través de la web e implementan el lado del cliente del protocolo.
+- Los servidores alojan objetos web direccionales por una URL, por ejemplo, Apache-Microsoft Internet Information Server.
 
-Cada nodo en Internet cuenta con una dirección IP única, además de contar con en nombre de dominio, el cual queda especificado en su URL. Dichos nombres pueden tener asignados más de una dirección IP, por ejemplo, Netflix posee múltiples nodos en distintas regiones del mundo con el fin de repartir la carga del sitio de forma uniforme y rotativa.
-Además, una dirección IP puede estar asociada a más de nombre, lo que significa que varios servicios están alojados de forma física en el mismo equipo; a esto se lo denomina *hosting*.
+El protocolo HTTP define la estructura de los mensajes y como se realiza el intercambio entre el cliente y el servidor, utilizando TCP como protocolo de transporte. Además, este protocolo establece una serie de métodos mediante las cuales el cliente realiza las peticiones, cuando se realiza cada petición tanto el cliente como el servidor reciben un código numérico que indican diferentes cosas de acuerdo al tipo de código, todo esto a su vez definido dentro de la especificación de HTTP.
+Este protocolo cuenta con múltiples versiones, su versión 2 concretamente, fue diseñada para ser el protocolo de próxima generación para aplicaciones web, introduciendo nuevos mecanismos significativos, para empezar funciona en la capa superior de TCP, es decir, en la ***capa de seguridad de transporte (TLS)***. A su vez lógicamente se divide en tres niveles:
 
->[!tldr] Características Principales del Sistema de Nombres de Dominio (DNS)
->1. La principal funcionalidad de este sistema es la de realizar la correspondencia de nombres a IPs y viceversa.
->2. Debido a la complejidad y el tamaño de la red, los DNS es un sistema distribuido, el cual está organizado de forma jerárquica, contando con servidores DNS raíz, DNS de nivel superior y DNS autoritativos que agrupan dominios pertenecientes a un grupo.
->3. Pueden utilizar TCP o UDP como método de envío de información, aunque la utilización más común es mediante UDP.
+1. **Nivel de Transmisión**: Abarcando el control de flujo, streams y tramas.
+2. **HPACK**: Se encarga de la codificación binaria y de implementar los protocolos de compresión.
+3. **Nivel Semántico**: se encarga de la interpretación y el significado de las acciones específicas que deben llevarse a cabo en respuesta a los comandos HTTP.
 
-Los pasos para buscar un recurso con un determinado nombre de dominio es el siguiente:
+Las novedades de la versión 2 del protocolo son las siguientes:
 
-1. Cliente envía consulta al *Resolver*.
-2. El *Resolver* verifica la caché.
-3. Si está envía respuesta al cliente.
-4. En caso de que no esté en caché, deberá consultar al DNS primario de la zona.
-5. Si este servidor no conoce la dirección consultará a servidores de nivel superior.
-6. Así hasta que se encuentre el recurso o se genere un mensaje de error.
+- Permite la multiplexación, es decir, varios flujos pueden ser transportados simultáneamente a través de una única conexión TCP.
+- Los encabezados HTTP de compresión se comprimen utilizando una combinación de esquemas de compresión.
+- Control de flujo y mecanismos de dependencia que permiten a los clientes y servidores HTTP / 2 señalar cómo transmitir objetos.
+- Mecanismo de inserción de recursos que facilita el envío de recursos de los servidores HTTP / 2 a sus clientes.
 
-#### Resolución de Nombres
+Los principales bloques de transmisión de HTTP 2 son los siguientes:
 
-La forma en la que se resuelven los nombres de dominio puede darse de dos formas:
+- **Tramas**: La unidad de datos básica, que reemplaza el encabezado HTTP / 1.1 y el formato de cuerpo. Las frames HTTP / 2 tienen una codificación binaria. Los marcos se dividen en header, datos y marcos de setting.
+- **Streams**: Reemplaza el protocolo de solicitud y respuesta de versiones anteriores. Es un canal bidireccional en el cual las tramas se transmiten. Un flujo incluye una sola solicitud y una única respuesta.
+- **Conexión TCP**: para reducir el número de conexiones TCP utilizadas por el servidor, permite que una sola conexión TCP lleve múltiples streams (multiplexación).
 
-- **Iterativa**: El agente retiene el control sobre el proceso de resolución y llama a cada uno de los servidores de nombres. La consulta comienza por el primer servidor del ***pathname***.
-- **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás sistemas de nombres.
+>[!tldr] Ventajas de HTTP 2
+>- Tiempos de carga más rápido.
+>- Ofrece una mayor seguridad, debido a que esta versión tendrá un encriptado por defecto, la seguridad a través de los sitios que utilizan el protocolo se incrementará.
+>- Compatible con dispositivos móviles: la función de compresión de encabezados permite a los sitios móviles con gran cantidad de solicitudes evitar que se descarguen los megabytes de los encabezados.
+>- Compatibilidad con HTTP / 1.1: Para garantizar que el cambio al nuevo protocolo sea lo más fluido posible, los servidores y navegadores que permanezcan compatibles con HTTP / 1.1 podrán comunicarse con servidores y/o navegadores HTTP / 2.
+>- HTTP / 2 tiene el requisito previo de que el sitio web esté ya en HTTPs, pero es importante tener en cuenta que HTTP / 2 requiere una versión mejorada de la seguridad de la capa de transporte (TLS1.2); ofreciendo una mejor seguridad que las versiones anteriores y debería ser utilizado por la mayoría de los servicios.
 
-#### Registros de Recursos
+###### Autenticación y Cookies
 
-Los servidores DNS que implementan conjuntamente la base de datos distribuida DNS almacenan los registros de recursos, incluyendo los que proporcionan las correspondencias entre nombre de host y dirección IP. Cada registro de recurso tiene un tipo que indica la clase de información que contiene.
+HTTP implementa servidores sin estado, esto significa que no se guarda información sobre la conexión, lo que simplifica el diseño y da un alto rendimiento. Sin embargo, para un sitio web, a menudo es deseable poder identificar a los usuarios, bien porque el servidor desea restringir el acceso a los usuarios o porque desea servir el contenido en función de la identidad del usuario. Para estos propósitos, se utilizan dos mecanismos.
 
-- ***SOA (Start Of Authority)***: dirección del responsable de la administración; nombre del huésped donde se pueden buscar los datos en la zona.
-- ***A (Address)***: dirección IP del huésped que permite las comunicaciones.
-- ***MX (Mail eXchange)***: enlace simbólico al servidor de correos.
-- ***SRV (SerVeR)***: nombre de un servidor para un servicio específico.
-- **NS (Name Servers)**: servidores de nombres.
-- **CNAME**: DNS distingue alias de lo que se llama nombres canónicos. Se asume que cada huésped tiene un nombre canónico o primario. Un alias se implementa en un nodo almacenándolo en un registro llamado CNAME.
-- **PTR (PoinTeR)**: mapa inverso de direcciones IP a los nombres de los huéspedes.
+- **Autorización**: Se solicita nombre de usuario y contraseña para acceder a los objetos. Se indican en las cabeceras HTTP.
+- **Cookies**: Se guarda un archivo que contiene información destinada al seguimiento de usuarios y el reconocimiento de preferencias de los mismos para construir patrones de navegación (RFC 2109).
 
+>[!info] Caching
+>Es una estrategia destinada a mejorar la performance del acceso a un sitio Web. Se almacenan las páginas o componentes de éstas en un hardware cercano al posible usuario. Pueden distinguirse los siguientes casos:
+>1. Páginas recientemente leídas en la propia PC del usuario.
+>2. Páginas de acceso frecuente almacenadas en diferentes servidores distribuidos geográficamente.
+>3. Componentes de contenido gráfico, archivos multimedia, etc., almacenados en servidores de alta performance.
+
+#### Simple Mail Transfer Protocol (SMTP)
+
+En este protocolo los sistemas actúa tanto como cliente como servidor. Además de transferir mensajes entre dos usuarios debe proporcionar medios para resolver problemas ante fallas de la red o máquinas, ya que en caso de que no se pueda mandar el mensaje, el servidor emisor va a conservar el mensaje y lo intentará enviar de nuevo.
+
+###### Multipurpose Internet Mail Extension
+
+Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño, otros códigos además de ASCII. Además, en su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato.
+La codificación de los mensajes se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
+
+###### Protocolos de Acceso al Correo
+
+Existen protocolos especiales de acceso al correo para transferencia de mensajes desde el servidor de correo a la PC local, entre ellos encontramos:
+
+- **POP3 (Post Office Protocol v3)**: El funcionamiento de este protocolo consta de los siguientes pasos
+	1. Un agente de usuario abre conexión TCP con el servidor de correo puerto 110.
+	2. El agente de usuario envía nombre de usuario y contraseña para realizar una autenticación (Fase de Autenticación).
+	3. Se descargan los correo de forma local (Fase de Transacción).
+	4. El cliente termina la operación y el servidor se actualiza (Fase de Actualización).
+- **IMAP (Internet Mail Access Protocol)**: Posee más funcionalidades que ***POP3***, pero es mucho más complejo, la principal diferencia es que IMAP permite que el agente de usuario acceda al almacenamiento de correos como si fuera local, desde distintas localizaciones sin necesidad de tener que mover los mensajes de un equipo a otro. Además de permitir al agente de usuario obtener partes específicas del mensaje, tales como encabezado o una parte del correo *MIME multipart*.
+- **HTTP**
