--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
@@ -6,7 +6,7 @@
 
 ## Sistema de Espacios de Nombres
 
-Los ***Sistemas de Nombre de Dominio (DNS)*** son los encargados de traducir el nombre de los diferentes hosts que existen a direcciones **IP**, haciendo más sencilla la tarea de direccionamiento que realizan los routers y demás dispositivos que forman parte de la infraestructura de internet.
+Los ***Sistemas de Nombre de Dominio (DNS)*** asocian un nombre a una dirección IP, además de ser el encargado de traducir el nombre de dominio de los diferentes hosts a direcciones **IP**, haciendo más sencilla la tarea de direccionamiento que realizan los routers y demás dispositivos que forman parte de la infraestructura de internet.
 Los DNS son una gran base de datos distribuida que implementa una jerarquía de servidores DNS, la decisión de optar por un enfoque descentralizado es debido a los siguientes motivos:
 
 1. **Un único punto de fallo**. Si el servidor DNS falla, entonces también falla toda la red Internet.
@@ -14,7 +14,7 @@ Los DNS son una gran base de datos distribuida que implementa una jerarquía de 
 3. **Base de datos centralizada distante**. Un único servidor DNS no puede aumentaría los tiempos de respuesta debido a la lejanía geográfica que existiría, sin contar la gran congestión de red que existiría.
 4. **Mantenimiento**. Ese único servidor DNS tendría que mantener registros de todos los hosts de Internet, teniendo que ser actualizada con frecuencia con el fin de incluir todos los hosts nuevos.
 
-Al mismo tiempo DNS se comporta como un protocolo de *capa de aplicación* que le permite a los hosts acceder a esta base de datos. Como protocolo DNS utiliza una conexión UDP a través del puerto 53.
+Al mismo tiempo, DNS se comporta como un protocolo de *capa de aplicación* que le permite a los hosts acceder a esta base de datos. Como protocolo, DNS utiliza una conexión UDP a través del puerto 53.
 La forma en la que este sistema pueden resolver los direccionamientos desde el cliente hacia su correspondiente servidor es mediante una organización jerárquica de los nombres de las URL, a nivel lógico, estos sistemas usan una estructura arbórea, similar a la de los sistemas de archivos de los sistemas operativos, para organizar todos los nombres de dominios, véase la siguiente imagen.
 
 ![[DNS-organizacion.png]]
@@ -34,17 +34,22 @@ Los pasos para buscar un recurso con un determinado nombre de dominio es el sigu
 
 1. Cliente envía consulta al *Resolver*.
 2. El *Resolver* verifica la caché.
-3. Si está envía respuesta al cliente.
+3. Si está, envía respuesta al cliente.
 4. En caso de que no esté en caché, deberá consultar al DNS primario de la zona.
-5. Si este servidor no conoce la dirección consultará a servidores de nivel superior.
+5. Si este servidor no conoce la dirección, consultará a servidores de nivel superior.
 6. Así hasta que se encuentre el recurso o se genere un mensaje de error.
 
 #### Resolución de Nombres
 
+Al proceso de buscar un nombre y encontrar una dirección se le conoce como ***resolución de nombres***. Cuando un *resolvedor* tiene una consulta referente a un nombre de dominio, la pasa a uno de los servidores de nombres locales. Si el dominio que se busca está bajo la jurisdicción del servidor de nombres, devuelve los ***registros de recursos autorizados***. Un registro autorizado es uno que proviene de la autoridad que administra a ese registro y, por ende, siempre es correcto. Los registros autorizados contrastan con los ***registros en caché***, que tal vez no estén actualizados.
 La forma en la que se resuelven los nombres de dominio puede darse de dos formas:
 
 - **Iterativa**: El agente retiene el control sobre el proceso de resolución y llama a cada uno de los servidores de nombres. La consulta comienza por el primer servidor del ***pathname***.
 - **Recursiva**: El agente envía el requerimiento al sistema de nombres raíz y este servidor se encarga de contactarse con los demás servidores de nombres, hasta encontrar el objeto en el último nombre del ***pathname***, en pocas palabras delega toda la resolución a los demás sistemas de nombres.
+
+>[!tldr] Sistema de Caching de los Servidores DNS
+>Cuando un servidor DNS resuelve la dirección IP de un nombre de dominio, almacena temporalmente esa información en su caché. El propósito de esta caché es reducir la necesidad de futuras búsquedas para el mismo nombre de dominio, lo que ahorra tiempo y reduce la carga en los servidores DNS.
+>Cada registro en la caché de DNS tiene un ***tiempo de vida (TTL)***, que es un valor establecido por el administrador del servidor DNS del dominio. El TTL indica cuánto tiempo debe almacenarse el registro en caché antes de que se considere obsoleto y se elimine de la caché.
 
 #### Registros de Recursos y Mensajes DNS
 
