Agrego Redes y Cosas importantes sobre Matrices

--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
@@ -8,6 +8,12 @@ Las principales características que tienen estos protocoles de nivel de aplicac
 - Replicación de datos para acercarlos a los usuarios y mejor tolerancia a fallas.
 - Administración local.
 
+Los protocolos, a muy grandes rasgos, se puede decir que tienen 3 componentes fundamentales:
+
+1.  **Sintaxis**: Se refiere a la estructura o formato de los datos que se transmiten. Esto incluye cómo se organizan los bits, la codificación de los datos, y los niveles de señales utilizados.
+2. **Semántica**: Trata sobre el significado de esos bits, es decir, cómo se interpretan los datos transmitidos, incluyendo la información de control y la gestión de errores.
+3. **Procedimiento**: El conjunto de reglas o métodos que determinan cómo se realiza la transmisión y recepción de los datos, incluyendo el establecimiento de la conexión, el intercambio de datos y la terminación de la sesión
+
 ## Tipos de Protocolos a Nivel Aplicación
 
 >[!example] World Wide Web
