--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -28,6 +28,10 @@ Además, las redes pueden ser conectadas entre ellas a través de distintos mode
 - **PAN** (Metropolitan Area Network = Red de Área Metropolitana): interconectan varias redes LAN en una zona geográficamente cercana, un ejemplo de esto puede ser WiMax, MetroEthernet.
 - **MAN** (Personal Area Network = Red de Área Personal): interconecta dispositivos dentro del área más cercana de un usuario, como por ejemplo el Bluetooth.
 
+>[!tldr] Nodos Adyacentes y Nodos Cercanos
+>- **Nodos Adyacentes**: Los nodos adyacentes se refieren a aquellos nodos en una red que están directamente conectados entre sí por un enlace. En otras palabras, hay una conexión física directa entre estos nodos.
+>- **Nodos Cercanos**: Puede referirse a nodos que están en la proximidad uno del otro en términos de estructura de red, pero no necesariamente conectados directamente por una sola arista. La cercanía puede implicar nodos que están a pocos saltos de distancia.
+
 ## Modelos de Arquitectura de Comunicaciones
 
 El modelo adoptado para visualizar la estructura de una arquitectura de comunicaciones, está basado en capas o niveles, como si de una cebolla se tratase. Los entornos de redes se organizan en niveles para reducir la complejidad del diseño, donde cada nivel o capa brinda servicios a su capa superior, y cada capa es independiente de las demás.
@@ -51,9 +55,24 @@ Si dos entidades se quieren comunicar exitosamente, deben usar el mismo lenguaje
 	3. **Sesión**: Proporciona el control de la comunicación entre las aplicaciones: establece, gestiona y cierra las comunicaciones o sesiones entre las aplicaciones cooperadoras.
 	4. **Transporte**: Proporciona seguridad, transferencia transparente de datos entre los puntos finales, además proporciona procedimientos de recuperación de errores y control de flujo *origen-destino*.
 	5. **Red**: Proporciona independencia a los niveles superiores respecto a las técnicas de conmutación y de transmisión utilizadas para conectar los sistemas, esta capa es la responsable del establecimiento, mantenimiento y cierre de la conexión.
-	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del inlace físico; envía bloques de datos, llamados tramas, llevando a cavo la sincronización, el control de errores y de flujo necesarios.
+	6. **Enlaces de Datos**: Proporciona un servicio de transferencia de datos seguro a través del enlace físico; envía bloques de datos, llamados tramas, llevando a cavo la sincronización, el control de errores y de flujo necesarios.
 	7. **Física**: Se encarga de la transmisión de cadenas de bits no estructurados sobre el medio físico; está relacionada con las características mecánicas, eléctricas, funcionales y de procedimiento para acceder a los medios físicos.
-- **Modelo TCP/IP** (Transmission Control Protocol/ Internet Protocol), es un modelo de 4 capas basado en modelo OSI, adoptado para la interconexión de sistemas. Este modelo es el más ampliamente usado ya que es independiente a la plataforma en la que se esté utilizando, al contrario del modelo OSI tradicional que varía según su implementación.
+
+>[!tldr] Inconvenientes del Modelo OSI
+>Existe una serie de motivos que hicieron que el modelo OSI no sea popular o ampliamente utilizado en la actualidad, estas razones son:
+>
+>1. **Mala Sincronización**: El estándar del modelo salió en un mal momento, lo que hizo que su adopción se viera limitada debido a su complejidad.
+>2. **Mala Tecnología**: La decisión de un modelo de 7 capas fue más arbitraria que práctica, quedando capas muy vacías y otras muy sobrecargas, además de que actividades como el direccionamiento, el control de flujo y control de errores aparecen múltiples veces en varias capas.
+>3. **Mala Implementación**: Debido a la complejidad del modelo y del protocolo, las primeras implementaciones fueron muy pesadas y lentas.
+>4. **Mala Política**: Debido a su temprana estandarización y empuje por parte de las instituciones gubernamentales, existía un sentimiento de imposición que generaba rechazo en los académicos y profesionales del sector. 
+
+- **Modelo TCP/IP** (Transmission Control Protocol/ Internet Protocol), es un modelo de 4 capas basado en modelo OSI, adoptado para la interconexión de sistemas. Este modelo es el más ampliamente usado, ya que es independiente a la plataforma en la que se esté utilizando, al contrario del modelo OSI tradicional que varía según su implementación.
+	1. **Aplicación**: Ésta contiene todos los protocolos de alto nivel, que implementan el modelo TCP/IP.
+	2. **Transporte**: Permite que las entidades pares, en los nodos de origen y de destino, lleven a cabo una conversación. En esta capa se definieron dos protocolos de transporte de extremo a extremo:
+		1. **TCP**: Protocolo orientado a la conexión que permite que un flujo de bytes originado en una máquina se entregue sin errores a cualquier otra máquina en la interred.
+		2. **UDP**: Protocolo sin conexión, no confiable para aplicaciones que no desean la asignación de secuencia o el control de flujo de TCP y prefieren proveerlos por su cuenta. Se utiliza mucho para las consultas de tipo *petición-respuesta*.
+	3. **Interred**: Permite que los hosts inyecten paquetes en cualquier red y que viajen de manera independiente hacia el destino, incluso pueden llegar en un orden totalmente diferente al orden en que se enviaron, en cuyo caso es responsabilidad de las capas más altas volver a ordenarlos.
+	4. **Enlace**: Describe qué enlaces se deben llevar a cabo para cumplir con las necesidades de esta capa de interred sin conexión.
 
 >[!tldr] Unidades de Datos Utilizados por los Protocolos
 >Los datos de usuario constituyen un bloque de información, al cual cada capa agrega un encabezado con información de control. La unión de datos de usuario y el encabezamiento se denomina unidad de datos del protocolo (PDU).
@@ -73,3 +92,5 @@ Las organizaciones de *normalización* definen las características de los equip
 >	- Asegura la comunicación entre productos de múltiples proveedores.
 >- Desventajas:
 >	- Tiende a congelar el desarrollo de la tecnología.
+
+Los ***sockets*** son una interfaz o punto de acceso entre el proceso que contiene la aplicación de usuario y el protocolo de la capa de transporte, que le permite a las diferentes aplicaciones realizar peticiones y recibir mensajes. En la práctica, los sockets son la unión de la dirección IP del destinatario + el puerto donde está escuchando la aplicación.
