Agregado lo de URL

--- a/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/2. Servicio de Nombre de Dominio (DNS).md
@@ -76,3 +76,10 @@ Cada partición del espacio de nombres está manejada por un servidor de nombres
 - **Forwarders**: servidores que solo efectúan consultas a otros servidores.
 - **Caching–only**: no tienen autoridad sobre un dominio. Solo tienen información que van almacenando ante cada consulta.
 
+#### Uniform Resource Locator (URL)
+
+Una URL o Localizador Uniforme de Recursos, es una dirección específica utilizada para acceder a recursos en Internet. Puede considerarse como la dirección de una página web o de un archivo en la web. Cada URL tiene dos componentes principales, el nombre del host del servidor y el nombre de la ruta del objeto, tomemos como ejemplo la siguiente URL:
+
+- https://www.fcad.uner.edu.ar/academicas/horarios-de-clase-2024/
+
+En este caso *www.fcad.uner.edu.ar* es el nombre del host del recurso, en este caso un HTML con muchas imágenes, mientras que */academicas/horarios-de-clase-2024/* es el nombre de la ruta que provee dicho recurso.
