--- a/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/1. Protocolos de Internet.md
@@ -75,12 +75,12 @@ HTTP implementa servidores sin estado, esto significa que no se guarda informaci
 
 En este protocolo los sistemas actúa tanto como cliente como servidor. Además de transferir mensajes entre dos usuarios debe proporcionar medios para resolver problemas ante fallas de la red o máquinas, ya que en caso de que no se pueda mandar el mensaje, el servidor emisor va a conservar el mensaje y lo intentará enviar de nuevo.
 
-###### Multipurpose Internet Mail Extension
+###### Multipurpose Internet Mail Extension (MIME)
 
 Es una ampliación del RFC 822 para resolver problemas que acarreaba SMTP. Este protocolo permite la transferencia de archivos ejecutables y binarios, mensajes de cualquier tamaño, otros códigos además de ASCII. Además, en su especificación se definen nuevos campos en la cabecera del mensaje, formatos de contenido (Texto sin formato, Imágenes, Audio, Video, Aplicación, Multiparte) y esquemas de codificación para interpretar cualquier formato.
 La codificación de los mensajes se realiza con Radix-64, donde se codifican los datos para que no sean vulnerables al procesarse por los programas de transporte de correo.
 
-###### Protocolos de Acceso al Correo
+##### Protocolos de Acceso al Correo
 
 Existen protocolos especiales de acceso al correo para transferencia de mensajes desde el servidor de correo a la PC local, entre ellos encontramos:
 
